--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="colorGray76">#5F6076</color>
     <color name="colorGray71">#4D4D71</color>
     <color name="colorGray64">#373964</color>
+    <color name="colorGrayA8">#8794A8</color>
     <color name="colorPurpleB9">#8080B9</color>
     <color name="colorPinkBF">#CC4EBF</color>
     <color name="colorRed62">#FD4D62</color>
