--- a/app/src/main/res/layout/fr_help.xml
+++ b/app/src/main/res/layout/fr_help.xml
@@ -34,13 +34,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <com.wolfpackdigital.cashli.shared.utils.views.ArcBackgroundView
             android:id="@+id/iv_arch"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/dimen_8dp"
-            android:contentDescription="@null"
-            android:src="@color/colorWhiteF9"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
