--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,10 @@
     <color name="colorWhiteF9">#F6F6F9</color>
     <color name="colorWhiteF5">#F0EDF5</color>
     <color name="colorGrayF3">#E2E2F3</color>
+    <color name="colorGrayF1">#EAE7F1</color>
     <color name="colorGrayF4">#DFDFF4</color>
     <color name="colorGrayDC">#C2C2DC</color>
+    <color name="colorGrayEB">#DDD6EB</color>
     <color name="colorGrayB6">#9F9FB6</color>
     <color name="colorGray76">#5F6076</color>
     <color name="colorGray71">#4D4D71</color>
@@ -18,6 +20,7 @@
     <color name="colorPinkBF">#CC4EBF</color>
     <color name="colorRed62">#FD4D62</color>
     <color name="colorGreen71">#07D171</color>
+    <color name="colorPurpleF3">#714EF3</color>
 
     <color name="claimCashGradientStart">#5840E9</color>
     <color name="claimCashGradientCenter">#915EFF</color>
